--- a/inst/scripts/51_bycatch.qmd
+++ b/inst/scripts/51_bycatch.qmd
@@ -18,8 +18,33 @@ format:
   docx: default 
 ---
 
-<!-- Copy this file to a work directory (e.g., bio.data/bio.snowcrab/reports/) and run Quarto from there (quarto render 51_bycatch.qmd --to html --to docx --to pdf )  -->
 
+
+<!-- This is a Quarto document -->
+
+<!-- To render:
+
+Copy this file to a work directory (e.g., bio.data/bio.snowcrab/reports/) 
+and run Quarto from there, eg: 
+
+# quarto render 51_bycatch.qmd --to html 
+
+The other documenet options work but formatting is still bit off: --to docx --to pdf
+
+-->
+
+<!--  NOTES: Make sure to have pulled observer data:
+
+    year.assessment = 2023
+    p = bio.snowcrab::load.environment( year.assessment=year.assessment )
+    yrs = 1996:year.assessment # redo all years
+    observer.db( DS="rawdata.redo", yrs=yrs )
+    observer.db( DS="bycatch.redo", yrs=yrs )  
+    observer.db( DS="odb.redo", p=p ) # 3 minutes
+    observer.db( DS="bycatch_clean_data.redo", p=p, yrs=p$yrs ) # 3 minutes
+ 
+-->
+ 
 # Approach: estimate bycatch from at seas observed data and project onto marfis data
 
 First set up environment. Can be made more efficient by doing intermediate saves (to do).
@@ -143,7 +168,7 @@ Map of locations of entanglements:
 ```{r}
 #| warning: false
 #| error: false 
-#| fig-cap: "Entanglement locations in Maritimes "
+#| fig-cap: "Entanglement locations in Maritimes. Whales (red), Leatherback turtles (green), Basking shark (blue)."
 #| label: bycatch_entanglements_map_all
 #| fig-dpi: 144
 #| fig-height: 5
